--- a/webpage/src/style.css
+++ b/webpage/src/style.css
@@ -32,6 +32,8 @@
   .App-body {
     text-align: left;
     margin-left: auto;
+    padding: 0;
+    float: left;
   }
   
   .App-link {
@@ -55,5 +57,26 @@
     display: block;
     margin-left: auto;
     margin-right: auto;
+  }
+
+  .square {
+    background: #fff;
+    border: 1px solid #999;
+    font-size: 24px;
+    font-weight: bold;
+    line-height: 34px;
+    height: 34px;
+    margin-right: -1px;
+    margin-top: -1px;
+    padding: 0;
+    text-align: center;
+    width: 34px;
+  }
+  
+  .board-row:after {
+    clear: both;
+    content: '';
+    display: table;
+    padding: 0;
   }
   
