--- a/webpage/src/style.css
+++ b/webpage/src/style.css
@@ -10,6 +10,8 @@
 
   .App {
     text-align: center;
+    margin:0;
+    padding: 0;
   }
   
   .App-logo {
@@ -67,6 +69,7 @@
   .square {
     background: #fff;
     border: 1px solid #999;
+    float: left;
     font-size: 24px;
     font-weight: bold;
     line-height: 34px;
@@ -78,10 +81,9 @@
     width: 34px;
   }
   
-  .board-row:after{
+  .board-row::after{
     clear: both;
     content: '';
-    display:grid;
-    padding: 0;
+    display: table;
   }
   
