--- a/webpage/src/style.css
+++ b/webpage/src/style.css
@@ -4,8 +4,9 @@
 
 
 .content-body {
-    text-align: left;
-    margin-left: auto;
+    padding-left: "25%";
+    padding-right: "25%";
+    float:"left";
   }
 
   .App {
@@ -76,7 +77,7 @@
     height: 34px;
     margin-right: -1px;
     margin-top: -1px;
-    padding: 0;
+    padding:0;
     text-align: center;
     width: 34px;
   }
